Fix margin and layout problems in task preview and task add

--- a/src/assets/styles/cmps/task/TaskPreview.scss
+++ b/src/assets/styles/cmps/task/TaskPreview.scss
@@ -151,7 +151,7 @@
 }
 .task-list {
     & li:last-child {
-        div {
+        .content {
             margin-block-end: 0;
         }
     }
